# pybantic

./: README.md  pyproject.toml
samples/hello_world/: client.py  main.proto  main.py  main_pb2.py  main_pb2.pyi  main_pb2_grpc.py
src/pybantic/: _elements.py  _grpc.py  _server.py  _templates.py  _types.py  client.py  convert.py  enums.py  main.proto  main.py  main_pb2.py  main_pb2.pyi  main_pb2_grpc.py  message.py  render.py  server.py  service.py  test.py  types.py
tests/: test.py  test2.py
